# cpp-command-line-interface

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
.assertions/: get_target_info.sh
.assertions/dependency_manager/: add.sh  install_from_git.sh
src/main/: hello_cli.cpp
src/objs/: base_arguments.cpp  base_arguments.h  command_line_interface.cpp  command_line_interface.h  unvalued_arguments.cpp
